unpackaged/main/default/objects/Contributing_Fund__c/Contributing_Fund__c.object-meta.xml
<CustomObject>
    <label>Contributing Fund</label>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>Contributing Fund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributing Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>