unpackaged/main/default/objects/Contributing_Fund__c/fields/Awarded_Grant__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Grant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Awarded Grant</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Contributing Funds</relationshipLabel>
    <relationshipName>Contributing_Funds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>