unpackaged/main/default/objects/Contributing_Fund__c/fields/Docket_Name__c.field-meta.xml
<CustomField>
    <fullName>Docket_Name__c</fullName>
    <formula>Awarded_Grant__r.Docket__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Docket Name</inlineHelpText>
    <label>Docket Name</label>
    <type>Text</type>
</CustomField>