unpackaged/main/default/objects/Contributing_Fund__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <formula>Fund_Allocation__r.Donation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Donation Name for Fund Allocation</inlineHelpText>
    <label>Donation</label>
    <type>Text</type>
</CustomField>