unpackaged/main/default/objects/Contributing_Fund__c/fields/Donor_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Code__c</fullName>
    <formula>Fund_Allocation__r.Donor_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Donor Code from Donor Organization Record</inlineHelpText>
    <label>Donor Code</label>
    <type>Text</type>
</CustomField>