unpackaged/main/default/objects/Contributing_Fund__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <formula>Fund_Allocation__r.Fund__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field showing the Fund Allocation Name</inlineHelpText>
    <label>Fund</label>
    <type>Text</type>
</CustomField>