unpackaged/main/default/objects/Contributing_Fund__c/fields/Fund_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Fund_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Allocation</label>
    <referenceTo>Fund_Allocation__c</referenceTo>
    <relationshipLabel>Contributing Funds</relationshipLabel>
    <relationshipName>Contributing_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>