unpackaged/main/default/objects/Contributing_Fund__c/fields/Fund_Spending_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Spending_End_Date__c</fullName>
    <formula>Fund_Allocation__r.Spending_Period_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Spending End Date</label>
    <type>Date</type>
</CustomField>