unpackaged/main/default/objects/Contributing_Fund__c/fields/Grant_Amount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount_Percentage__c</fullName>
    <formula>Amount__c / Awarded_Grant__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Amount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>