unpackaged/main/default/objects/Contributing_Fund__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <inlineHelpText>Set by process. Used in DLRS to set the Actual &amp; Projected Expenses on Fund Allocations</inlineHelpText>
    <label>Opportunity Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>