unpackaged/main/default/objects/Contributing_Fund__c/fields/Opportunity_Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Formula__c</fullName>
    <formula>TEXT( Awarded_Grant__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage Formula</label>
    <type>Text</type>
</CustomField>